# hydra

./: .gitignore  README.md
hydra_arm/: CMakeLists.txt  package.xml
hydra_arm/arduino/hydra_arm/: JointSignalSubscriber.h  hydra_arm.ino
hydra_arm/nodes/: hydra_arm_motor_control.py  hydra_arm_teleop.py
hydra_common/: CMakeLists.txt  package.xml
hydra_common/include/hydra_common/dynamic_reconfigure/: server.h
hydra_drive/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hydra_drive/arduino/HydraDriveControl/: HydraDriveControl.ino
hydra_drive/arduino/HydraDriveEncoder/: HydraDriveEncoder.ino
hydra_drive/arduino/hydra_drive/: hydra_drive.ino
hydra_drive/circuits/: HydraDriveEncoder.gsch
hydra_drive/include/: TwistSpeedMapper.hh
hydra_drive/msg/: PowerLevels.msg  TreadSpeeds.msg
hydra_drive/scripts/: hydra_drive_logic.py  pygame_drive_control.py
hydra_drive/src/: TwistSpeedMapper.cc
hydra_imu/: CMakeLists.txt  nodelets.xml  package.xml
hydra_imu/arduino/MinIMU9v3/: ArduinoIDESucks.h  MinIMU9v3.ino
hydra_imu/cfg/: AHRS.py  HoltWintersIMUFilter.py
hydra_imu/include/hydra_imu/: AHRS.hh  Filter.hh  HoltWintersIMUFilter.hh  IMUDataScaler.hh  MadgwickAHRS.hh
hydra_imu/include/hydra_imu/bits/: Filter.tcc
hydra_imu/msg/: IMUConfiguration.msg  IMUData.msg  IMUDataLimits.msg  IMUSensorConfiguration.msg  RawIMUData.msg
hydra_imu/src/hydra_imu/: AHRS.cc  HoltWintersIMUFilter.cc  IMUDataScaler.cc  MadgwickAHRS.cc
hydra_tests/: CMakeLists.txt  package.xml
hydra_tests/arduino/MinIMU9v3test/: ArduinoIDESucks.h  MinIMU9v3test.ino
hydra_tests/launch/: arm-test.launch  imu_test.launch  motor-test.launch  remote-motor-test.launch  rosbridgemotortest.launch
hydra_tests/param/: AHRS.yaml  HoltWintersIMUFilter.yaml
hydra_tests/scripts/: motor_control.py
