<?xml version="1.0"?>
<package>
  <name>hydra_drive</name>
  <version>0.0.0</version>
  <description>Drive code for DUBotics Hydra</description>


  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <author email="cjsutton@u.washington.edu">Collin J. Sutton</author>
  <maintainer email="cjsutton@u.washington.edu">Collin J. Sutton</maintainer>

  <license>GPLv2</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hydra_drive</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <hydra_drive plugin="${prefix}/nodelet_plugins.xml" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
